--- a/iris-dt-wb.ipynb
+++ b/iris-dt-wb.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Frame the problem: Given features of a flower, can we accurate assign them the correct flower?"
+    "# Frame the problem: Given the features of a flower, can we predict the species of the flower?"
    ]
   },
   {
