--- a/iris-rf-key-.ipynb
+++ b/iris-rf-key-.ipynb
@@ -16,20 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n!pip install pydotplus\\n!pip install numpy\\n!pip install ipython\\n!pip install sklearn\\n!pip install matplotlib\\n!pip install seaborn\\n'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "!pip install pydotplus\n",
@@ -43,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +40,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "from matplotlib import pyplot as plt\n",
     "from IPython.display import Image  \n",
     "import pydotplus\n",
@@ -424,7 +414,7 @@
        "                       max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
        "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "                       min_samples_leaf=1, min_samples_split=2,\n",
-       "                       min_weight_fraction_leaf=0.0, n_estimators=10,\n",
+       "                       min_weight_fraction_leaf=0.0, n_estimators=500,\n",
        "                       n_jobs=None, oob_score=True, random_state=42, verbose=0,\n",
        "                       warm_start=False)"
       ]
@@ -435,7 +425,7 @@
     }
    ],
    "source": [
-    "forrest_clf = RandomForestClassifier(n_estimators=10, oob_score=True, random_state=42)\n",
+    "forrest_clf = RandomForestClassifier(n_estimators=500, oob_score=True, random_state=42)\n",
     "\n",
     "forrest_clf.fit(X_train, y_train)"
    ]
@@ -458,7 +448,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Out-of-bag score estimate: 0.893\n",
+      "Out-of-bag score estimate: 0.907\n",
       "Mean accuracy score: 0.987\n"
      ]
     }
@@ -472,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +521,7 @@
        "virginica        0           1         22"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,6 +529,27 @@
    "source": [
     "cm = pd.DataFrame(confusion_matrix(y_test, y_pred), columns=iris.target_names, index=iris.target_names)\n",
     "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sepal length (cm) 0.11154952501633716\n",
+      "sepal width (cm) 0.04713895682401728\n",
+      "petal length (cm) 0.4478492880674621\n",
+      "petal width (cm) 0.39346223009218345\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, score in zip(iris[\"feature_names\"], forrest_clf.feature_importances_):\n",
+    "    print(name, score)"
    ]
   },
   {
