--- a/iris-dt-wb.ipynb
+++ b/iris-dt-wb.ipynb
@@ -124,7 +124,11 @@
    "source": [
     "y_pred = tree_clf.predict(X_test)\n",
     "\n",
-    "accuracy_score(y_test, y_pred)"
+    "training_accuracy = accuracy_score(y_train, tree_clf.predict(X_train))\n",
+    "test_accuracy = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"The training accuracy is: {training_accuracy:.3}\")\n",
+    "print(f\"The test accuracy is: {test_accuracy:.3}\")"
    ]
   },
   {
